Fix z-index in input challenges (#377)
Close #371

--- a/src/assets/source/styles/partials/_serlo_exercises.scss
+++ b/src/assets/source/styles/partials/_serlo_exercises.scss
@@ -151,6 +151,9 @@
         padding-right: 0;
         margin-bottom: 15px;
         @include bottom-frame($serloBlue);
+        &::before {
+          z-index: inherit;
+        }
     }
 
     input.input-challenge-input {
